--- a/flappy.html
+++ b/flappy.html
@@ -4,8 +4,7 @@
    <meta charset="utf-8">
         <meta name="description" content="Resume, Eunjun Jeong, Asian boy in HTML class, HTML">
         <title>Eunjun Jeong portfolio :: Resume</title>
-        <link rel="stylesheet" href="Style.css">
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
    <style>
