--- a/flappy.html
+++ b/flappy.html
@@ -4,7 +4,8 @@
    <meta charset="utf-8">
         <meta name="description" content="Resume, Eunjun Jeong, Asian boy in HTML class, HTML">
         <title>Eunjun Jeong portfolio :: Resume</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="Style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
    <style>
@@ -28,6 +29,9 @@
         <a href="flappy.html">FLAPPY</a>
 </nav>
 <main>
+    <h2>
+        Let's see how far you can go!
+    </h2>
    <!-- This is the HTMLcode. It will be in the <main> section of your website --> 
    <div id="game" ></div>
    <div class="game-controls">
@@ -157,14 +161,34 @@
 </script>
 </div>
 <footer>
-    <hr>
-    <p><a href="https://saintpaul.edu/">Saint Paul College</a></small></p>
-    <p><a href="mailto:jjdropit@gnail.com" target="_blank">Email Me</a> &bull;
-    <a href="tel:651-354-4880">Call Me</a> &bull;
-    <a href="sms:651-354-4880">Text Me</a>
-    </p>
-    <small>&copy; 2022 My cool website. All rights reserved.</hr>
-</footer>
+        <div class="row icons">
+            <div class="col-sm-3">
+                <a href="https://github.com/AG47JJ">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+                <h4>Github</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="jjdropit@gmail.com">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </a>
+                <h4>E-mail</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="https://www.instagram.com/juunn._.0618/">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                <h4>Instagram</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="651-354-4880">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                </a>
+                <h4>Phone</h4>
+            </div>
+        </div>
+        <small>&copy; 2022 My cool website. All rights reserved.</hr>
+    </footer>
 </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
