--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Resume, Eunjun Jeong, Asian boy in HTML class, HTML">
         <title>Eunjun Jeong portfolio :: Resume</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     </head>
@@ -41,12 +41,32 @@
             </main>
             </div>
     <footer>
-        <hr>
-        <p><a href="https://saintpaul.edu/">Saint Paul College</a></small></p>
-        <p><a href="mailto:jjdropit@gnail.com" target="_blank">Email Me</a> &bull;
-        <a href="tel:651-354-4880">Call Me</a> &bull;
-        <a href="sms:651-354-4880">Text Me</a>
-        </p>
+        <div class="row icons">
+            <div class="col-sm-3 center-block" style="text-align:center;">
+                <a href="https://github.com/AG47JJ">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+                <h4>Github</h4>
+            </div>
+            <div class="col-sm-3 center-block"style="text-align:center;">
+                <a href="jjdropit@gmail.com">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </a>
+                <h4>E-mail</h4>
+            </div>
+            <div class="col-sm-3 center-block"style="text-align:center;">
+                <a href="https://www.instagram.com/juunn._.0618/">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                <h4>Instagram</h4>
+            </div>
+            <div class="col-sm-3 center-block"style="text-align:center;">
+                <a href="651-354-4880">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                </a>
+                <h4>Phone</h4>
+            </div>
+        </div>
         <small>&copy; 2022 My cool website. All rights reserved.</hr>
     </footer>
     </div>
