--- a/resume.html
+++ b/resume.html
@@ -52,14 +52,34 @@
             </main>
             </div>
             <footer>
-                <hr>
-                <p><a href="https://saintpaul.edu/">Saint Paul College</a></small></p>
-                <p><a href="mailto:jjdropit@gnail.com" target="_blank">Email Me</a> &bull;
-                <a href="tel:651-354-4880">Call Me</a> &bull;
-                <a href="sms:651-354-4880">Text Me</a>
-                </p>
-                <small>&copy; 2022 My cool website. All rights reserved.</hr>
-            </footer>
+        <div class="row icons">
+            <div class="col-sm-3">
+                <a href="https://github.com/AG47JJ">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+                <h4>Github</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="jjdropit@gmail.com">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </a>
+                <h4>E-mail</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="https://www.instagram.com/juunn._.0618/">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                <h4>Instagram</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="651-354-4880">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                </a>
+                <h4>Phone</h4>
+            </div>
+        </div>
+        <small>&copy; 2022 My cool website. All rights reserved.</hr>
+    </footer>
             </div>
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
